k8s/k8-nginx-ingress/hello-world2.yaml
# hello-world.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world-2
  template:
    metadata:
      labels:
        app: hello-world-2
    spec:
      containers:
      - name: hello-world-2
        image: shahedk/testapi
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-2
spec:
  selector:
    app: hello-world-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
